--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,17 @@
     <string name="calculate_volume">Hitung Volume</string>
     <string name="calculate_circumference">Hitung Keliling</string>
     <string name="calculate_surface_area">Hitung Luas Area</string>
+
+    <string name="start_service">Start Service</string>
+    <string name="start_intent_service">Start Intent Service</string>
+    <string name="start_bound_service">Start Bound Service</string>
+    <string name="stop_bound_service">Stop bound Service</string>
+
+    <string name="this_sms_receiver_app">Ini Aplikasi Sms Receiver</string>
+    <string name="download_file">Download a File</string>
+    <string name="coming_from">Coming From</string>
+    <string name="this_play">Oii, main kesini jadi ngga? sekarang yak.</string>
+    <string name="close">Tutup</string>
+    <string name="check_sms_permission">Check SMS Permission</string>
+    <string name="incoming_message">Incoming Message</string>
 </resources>
